# embedded-linux-helper

./: README.md
app_develop/lab/app_c/: CMakeLists.txt  cross.txt  meson.build
app_develop/lab/app_c/.cache/clangd/index/: main.c.AA469F11BC3293C5.idx
app_develop/lab/app_c/cmake/: toolchain.cmake
app_develop/lab/app_rust/: Cargo.toml
app_develop/lab/app_rust/.cargo/: config.toml
app_develop/lab/app_zig/: build.zig
app_develop/lab/app_zig/src/: main.zig
intro-with-qemu/: hexagram-main.md
